[bugfix] correctly align “toot” buttons

--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -609,23 +609,22 @@
 
 .compose-form__publish {
   display: flex;
-  justify-content: flex-end;
-  min-width: 0;
-  flex: 0 0 auto;
   column-gap: 5px;
+  flex: 0 0 auto;
+  justify-content: flex-end;
+  margin-top: 10px;
+  min-width: 0;
 
-  .compose-form__publish-button-wrapper {
-    overflow: hidden;
-    padding-top: 10px;
+  button {
+    --size-icon: 18px;
 
-    button {
-      padding: 7px 10px;
-      text-align: center;
-    }
-
-    & > .side_arm {
-      width: 36px;
-    }
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    gap: 5px;
+    padding: 8px 12px;
+    line-height: 20px;
+    text-align: center;
   }
 }
 
