--- a/app/javascript/flavours/glitch/styles/gts.scss
+++ b/app/javascript/flavours/glitch/styles/gts.scss
@@ -14,6 +14,7 @@
 /* Diff */
 .gts-icon {
   display: inline-block;
+  flex-shrink: 0;
   width: var(--size-icon);
   height: var(--size-icon);
 }
